# Langchain-campusX

./: README.md  langchain-chroma.ipynb  main.py  pyproject.toml  rag-base-langchai-youtube-bot.ipynb  requirements.txt  template.json  too-calling-langchain.ipynb
Document_loader/: directloader.py  pypdf_loader.py  tempCodeRunnerFile.py  text_loader.py  webpage_loader.py
Langhchainllmmode/: Huggingface-api-token.ipynb  chatbot.py  chatmodel.ipynb  embeddingmodel.ipynb  message.py
Prompts/: Partial_Prompting.py  chattemplate.py  messages_paceholder.py  prmpt_ui.py  prompt_as_template.py  with_strutured_output_typedict.py
Runnable_llm-chain/: RunnableBranch.py  RunnableLCEL.py  RunnableLambda.py  RunnableLambda_withexample.py  RunnableParallel.py  RunnablePassthrogh.py  RunnableSequential.py  langchain-aam-jindagi.ipynb  llm-mentos-jindagi.ipynb
Text Splitters/: Sementic_meani ng_spliter.py  length_base_spliter.py
Tool Calling/: AI-agent_task.ipynb  too-calling-langchain.ipynb  tool-calling_with_bindding_inlangchain.ipynb
cricket_chroma_db/: chroma.sqlite3
langchain-Chains/: Parallel_chain.py  conditional_output.py  langchain-retrievers.ipynb  sequential_chain.py  simple_chains.py
python_env/: pyvenv.cfg
python_env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
structure Output/: Structure_Output.py  prompt_generator.py  pydantic_demo.py  pydantic_structure_output.py  typedict.py  with_strutured_output_json.py  with_sturtured_output_pydantic.py
